Add a button to delete a graph